# clangtidy_project

./: CMakeLists.txt  Dockerfile  Jenkinsfile
